--- a/template/index.pug
+++ b/template/index.pug
@@ -7,9 +7,9 @@ html(lang="vi")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css")
     link(rel="stylesheet", href="/css/style.css")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css")
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Poller+One&family=Yuji+Boku&display=swap" rel="stylesheet">
+    link(rel="preconnect", href="https://fonts.googleapis.com")
+    link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Poller+One&family=Yuji+Boku&display=swap", rel="stylesheet")
 
   body
     // Header
@@ -20,9 +20,9 @@ html(lang="vi")
           nav
             ul.nav
               li.nav-item
-                a.nav-link.text-white(href="#home") Trang Chủ
+                a.nav-link.text-white(href="/") Trang chủ
               li.nav-item
-                a.nav-link.text-white(href="#about") Giới Thiệu
+                a.nav-link.text-white(href="/about") Giới thiệu
 
     // Main content
     main.container
@@ -44,27 +44,5 @@ html(lang="vi")
                 p.mt-2.text-muted Chưa có ảnh được chọn
               img#preview.img-fluid.rounded.d-none(alt="Preview")
 
-
     script(src="https://code.jquery.com/jquery-3.7.1.min.js")
-    script.
-      $(document).ready(function() {
-        $('#image').on('change', function(event) {
-          const file = event.target.files[0];
-          const $preview = $('#preview');
-          const $placeholder = $('.preview-placeholder');
-
-          if (file) {
-            const reader = new FileReader();
-            reader.onload = function(e) {
-              $preview.attr('src', e.target.result)
-                      .removeClass('d-none');
-              $placeholder.addClass('d-none');
-            };
-            reader.readAsDataURL(file);
-          } else {
-            $preview.attr('src', '')
-                    .addClass('d-none');
-            $placeholder.removeClass('d-none');
-          }
-        });
-      });
+    script(src="/js/review.js")
